# object_detection

./: .gitignore  pyproject.toml
src/: dataset.py  default_box.py  extract_inform.py  l2norm.py  make_data_path.py  model.py  multibox_loss.py  test.py  train.py  transform.py
src/utils/: augmentation.py  boxes_utils.py
