[project]
name = "object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "torch==2.0.1",
    "torchvision==0.15.2",
]
